# Silicon-Photonics-Microring-Performance-Prediction

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
notebooks/: 01_data_eda.ipynb  02_wafermap_story.ipynb  03_baseline_model.ipynb  analysis.ipynb  wafermap_downstream_status.ipynb
src/: __init__.py  generator.py  models.py  physics.py  utils.py
tests/: __init__.py  test_generator.py
